change in the product search method and addition of a filter in the product route
